--- a/app/scss/site.scss
+++ b/app/scss/site.scss
@@ -11,6 +11,7 @@ body {
     margin: 0;
     color: #636E77;
     line-height: 1.5;
+    background: red;
 }
 
 h1, h2, h3, h4 {
@@ -546,4 +547,3 @@ cite {
 .t-object {
     background: #E6A013;
 }
-
