--- a/site/templates/components.html
+++ b/site/templates/components.html
@@ -2,9 +2,9 @@
 {% block title %}{{ config.seo.title }} {{ component.name }} {% endblock %}
 
 {% block body %}
-<div class="comp-header">
+<div class="page-header">
     {% block header %}
-    <h1>
+    <h1 class="page-header__title">
         Components
     </h1>
     {% endblock %}
@@ -13,7 +13,7 @@
     <div class="panel-right-content">
         {% block intro %}
         {% endblock %}
-        <div class="panel-right-padding">
+        <div class="gutters">
             {% block content %}{% endblock %}
         </div>
     </div>
