--- a/site/templates/base.html
+++ b/site/templates/base.html
@@ -5,16 +5,24 @@
     <link rel="stylesheet" href="/static/css/site.css">
 </head>
 <body>
-    <div class="panels">
-        <div class="depth-1 panel-left">
-            <div class="nav">
+    <div class="app">
+        <div class="site-content panel-right">
+            <div class="container">
+            {% block body %}
+
+            {% endblock %}
+            </div>
+        </div>
+
+        <div class="site-nav panel-left">
+            <nav class="nav-primary">
             {% block nav %}
-                <h4 class="u-dark-text">
+                <h3 class="u-dark-text">
                     <a href="/">Design System</a>
-                </h4>
+                </h3>
+                <hr />
                 {% for nav in navigation.children %}
-                    <hr>
-                    <h4 class="u-dark-text u-tight">
+                    <h4 class="u-dark-text">
                         {% if nav.children.length %}
                         {{ nav.label }}
                         {% endif %}
@@ -23,25 +31,20 @@
                         <a href="{{ nav.path }}">{{ nav.label }}</a>
                         {% endif %}
                     </h4>
-
-                    {% for child in nav.children %}
-                    <div class="nav__item">
-                        <a href="{{ child.path }}">
-                            {{ child.label }}
-                        </a>
-                    </div>
-                    {% endfor %}
+                    {% if nav.children|length > 1 %}
+                        <div class="nav__group">
+                            {% for child in nav.children %}
+                            <div class="nav__item">
+                                <a class="nav__link" href="{{ child.path }}">
+                                    {{ child.label }}
+                                </a>
+                            </div>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
                 {% endfor %}
             {% endblock %}
-
-            </div>
-        </div>
-        <div class="panel-right">
-            <div class="container">
-            {% block body %}
-
-            {% endblock %}
-            </div>
+            </nav>
         </div>
     </div>
     <script src="/static/js/prism.js"></script>
