--- a/examples/intro/client/ui/components/rikki.html
+++ b/examples/intro/client/ui/components/rikki.html
@@ -3,6 +3,6 @@
 
 {# Usage example: #}
 {# {% import "rikki.html" as rikki %} #}
-{# {{ rikki.icon(icon="kiwibank-logo", class="icon-logo") }} #}
+{# {{ rikki.icon(icon="logo", class="icon-logo") }} #}
 
 {% macro list() %}{{ _component('list', kwargs) }}{% endmacro %}
