Add basic support for more tokens in the live pattern library

--- a/examples/intro/client/ui/scss/_tokens.scss
+++ b/examples/intro/client/ui/scss/_tokens.scss
@@ -1,10 +1,10 @@
 // Design System Tokens
-// Generated at Fri May 12 2017 21:43:52 GMT+0300 (EEST)
 
 $color-transparent: transparent;
 $color-white: #ffffff;
 $color-black: #000000;
 $color-light-blue: #cfe2e8;
+$background-color-light-blue: #cfe2e8;
 $breakpoint-xsmall: 30em;
 $breakpoint-small: 47.9375em;
 $breakpoint-smallish: 37.5em;
@@ -12,6 +12,23 @@ $breakpoint-upto-smallish: 37.4375em;
 $breakpoint-medium: 48em;
 $breakpoint-large: 64.0625em;
 $breakpoint-xlarge: 80em;
+$font-family: Georgia, serif;
+$font-family-sans: 'Segoe UI', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$font-weight-light: 300;
+$font-weight-normal: 400;
+$font-weight-bold: 700;
+$font-weight-black: 900;
+$font-size-heading-1: 2.5rem;
+$font-size-heading-2: 1.5rem;
+$font-size-heading-3: 1.125rem;
+$font-size-base: 16px;
+$font-size-rate: 3.5rem;
+$font-size-label: .6875rem;
+$font-size-small: .875rem;
+$font-line-height-heading-1: 1.3;
+$font-line-height-heading-2: 1.333333;
+$font-line-height-base: 1.5;
+$font-line-height-buttons: 2.25;
 $media-query-mq-xsmall: "only screen and (max-width: 30em)";
 $media-query-mq-small: "only screen and (max-width: 47.9375em)";
 $media-query-mq-upto-smallish: "only screen and (max-width: 37.4375em)";
@@ -20,6 +37,16 @@ $media-query-mq-medium: "only screen and (min-width: 48em)";
 $media-query-mq-medium-landscape: "only screen and (min-width: 48em) and (min-aspect-ratio: 4/3)";
 $media-query-mq-large: "only screen and (min-width:64.0625em)";
 $media-query-mq-xlarge: "only screen and (min-width:80em)";
+$size-space-default: 1.5rem;
+$size-space-paragraph: .8125rem;
+$size-logo: 3.5rem;
+$size-logo-small: 2.875rem;
+$size-icon: 1rem;
+$size-icon-small: .875rem;
+$size-icon-xsmall: .75rem;
+$size-icon-large: 1.25rem;
+$size-icon-xlarge: 1.5rem;
+$size-icon-double: 2rem;
 $transition-ease-in-cubic: cubic-bezier(0.55, 0.055, 0.675, 0.19);
 $transition-ease-out-cubic: cubic-bezier(0.215, 0.61, 0.355, 1);
 $transition-ease-in-out-cubic: cubic-bezier(0.785, 0.135, 0.150, 0.860);
