--- a/src/site/templates/code-sample.html
+++ b/src/site/templates/code-sample.html
@@ -9,8 +9,8 @@
         <tr>
             <td class="w-1/10 v-top">Jinja2 &amp; Nunjucks</td>
             <td>
-<pre class="language-js"><code>{% raw %}{% import "rikki.html" as rikki %}
-rikki.{% endraw %}{{ component.id }}({% for key, value in state.data %}{% if value != None %}
+<pre class="language-js"><code>{% raw %}{% import "components.html" as components %}
+components.{% endraw %}{{ component.id }}({% for key, value in state.data %}{% if value != None %}
     {{ key }}={{ value|python_value }}{% if not loop.last %}, {% endif %}{% endif %}{% endfor %}
 )</code></pre>
             </td>
