--- a/src/site/scss/site.scss
+++ b/src/site/scss/site.scss
@@ -7,11 +7,14 @@
 body {
     font-family: '-apple-system', sans-serif;
     margin: 0;
-    color: #636E77;
+    color: #636e77;
     line-height: 1.5;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
     margin-top: 0;
 }
 
@@ -20,21 +23,19 @@ h1 {
     margin-bottom: 2.5rem;
 }
 
-
 .t-heading {
     color: #00bcd4;
 }
 
-
-h2, h3 {
+h2,
+h3 {
     font-weight: 400;
 }
 
 h4 {
     font-weight: 400;
-    color: #008BA5;
+    color: #008ba5;
 }
-
 
 .u-tiny {
     font-size: 14px;
@@ -45,13 +46,11 @@ p {
     margin-top: 0;
 }
 
-
 /**
  * =============================================================================
  * UI for pattern library
  * =============================================================================
  */
-
 
 .comp-header {
     padding: 2em;
@@ -65,30 +64,25 @@ p {
     margin-bottom: 0;
 }
 
-
 .container {
     flex: 1;
     margin-left: -1px;
 }
-
 
 .panel-right-flex {
     display: flex;
     flex: 1;
 }
 
-
-
 .right-container {
     /*background: #E4E4E4;*/
-    border-left: solid 1px #DADADA;
+    border-left: solid 1px #dadada;
     width: 190px;
-    padding: .5em 1rem;
+    padding: 0.5em 1rem;
     padding-top: 1.5rem;
 }
 
 .component-library {
-
 }
 
 .component {
@@ -101,15 +95,15 @@ p {
     font-weight: 400;
     text-transform: uppercase;
     margin-bottom: 1rem;
-    padding-bottom: .25rem;
+    padding-bottom: 0.25rem;
     margin-top: 0;
     border-bottom: dotted 1px #eee;
     color: #aaa;
 }
 
-
 .paper-material {
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12),
+        0 3px 1px -2px rgba(0, 0, 0, 0.2);
 }
 
 .card {
@@ -130,56 +124,56 @@ p {
     font-size: 14px;
 }
 
-
 .component__iframe {
     border: 0;
     max-width: 100%;
     min-width: 50%;
     min-height: 16rem;
     resize: both;
-    border: solid 1px #F7F5F5;
+    border: solid 1px #f7f5f5;
 }
 
 .font-small {
     font-size: 14px;
 }
 
-
 .table {
     width: 100%;
     border-collapse: separate;
     border-spacing: 0;
-    border-right: solid 1px rgba(0,0,0,.1);
-    border-bottom: solid 1px rgba(0,0,0,.1);
-    border-bottom-right-radius: .25em;
-    border-bottom-left-radius: .25em;
-    border-top-right-radius: .25em;
+    border-right: solid 1px rgba(0, 0, 0, 0.1);
+    border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+    border-bottom-right-radius: 0.25em;
+    border-bottom-left-radius: 0.25em;
+    border-top-right-radius: 0.25em;
 }
 
-.table > :first-child td:first-child { border-top-left-radius: .25em; }
-.table > :first-child td:last-child  { border-top-right-radius: .25em; }
+.table > :first-child td:first-child {
+    border-top-left-radius: 0.25em;
+}
+.table > :first-child td:last-child {
+    border-top-right-radius: 0.25em;
+}
 
 .table td {
-    border: solid 1px rgba(0,0,0,.1);
+    border: solid 1px rgba(0, 0, 0, 0.1);
     border-bottom: 0;
     border-right: 0;
-    padding: .5em;
+    padding: 0.5em;
 }
 
 .table__colheader {
     font-weight: 600;
 }
 
-
 .pill {
     display: inline-block;
-    border-radius: .25em;
+    border-radius: 0.25em;
     color: #fff;
     background: #777;
-    padding: .25em .5em;
-    font-size: .875em;
+    padding: 0.25em 0.5em;
+    font-size: 0.875em;
 }
-
 
 .panels {
     display: flex;
@@ -194,16 +188,12 @@ p {
 .panel-left {
     min-width: 200px;
     padding: 1.5rem 1rem;
-    border-right: solid 2px #E2EBEF;
-
+    border-right: solid 2px #e2ebef;
 }
-
 
 .depth-1 {
-    background: #F5F8F9;
+    background: #f5f8f9;
 }
-
-
 
 .panel-right {
     /*margin-left: 3rem;*/
@@ -212,22 +202,18 @@ p {
     flex-direction: row;
 }
 
-
 .panel-right-content {
     flex: 1;
 }
 
-
 a {
-    color: #0099AD;
+    color: #0099ad;
     text-decoration: none;
 }
 
 a:hover {
     color: #007686;
 }
-
-
 
 .media {
     overflow: hidden;
@@ -250,20 +236,18 @@ a:hover {
 }
 
 .swatch__image {
-    background: rgba(0,0,0,0.1);
-    margin-bottom: .5em;
+    background: rgba(0, 0, 0, 0.1);
+    margin-bottom: 0.5em;
 }
-
 
 .swatch__body {
     font-size: 13px;
 }
 
-
 .code-inline {
     background: #eee;
-    padding: .125em .25em;
-    border-radius: .25em;
+    padding: 0.125em 0.25em;
+    border-radius: 0.25em;
     border: solid 1px #ddd;
 }
 
@@ -273,14 +257,9 @@ a:hover {
     color: #999;
 }
 
-
 .u-overflow {
     overflow: hidden;
 }
-
-
-
-
 
 .panel-right-padding {
     padding-left: 2rem;
@@ -289,16 +268,13 @@ a:hover {
     padding-bottom: 1.5rem;
 }
 
-
 .panel-intro {
     /*background-color: #EBF2F3;*/
     /*border-bottom: solid 1px #D5E0E2;*/
-    border-left: solid 1px #D5E0E2;
+    border-left: solid 1px #d5e0e2;
     font-size: 1.125rem;
     padding-bottom: 0;
 }
-
-
 
 .nav {
     /*position: fixed;*/
@@ -319,28 +295,24 @@ hr {
 .divider-body {
     margin-top: 3rem;
     margin-bottom: 2rem;
-    border-bottom-color: #9DA4B4;
+    border-bottom-color: #9da4b4;
     border-bottom-width: 1px;
     border-style: dotted;
 }
 
 .nav__item {
-    margin-bottom: .5rem;
+    margin-bottom: 0.5rem;
     font-size: 14px;
 }
-
-
-
 
 .nav__current {
     color: #222 !important;
 }
 
-pre[class*=language] {
-    background-color: #F5F8F9;
-    border: solid 1px #E2EBEF;
+pre[class*='language'] {
+    background-color: #f5f8f9;
+    border: solid 1px #e2ebef;
 }
-
 
 /*.panel-code pre[class*=language] {
     background: #eee;
@@ -349,7 +321,6 @@ pre[class*=language] {
 .markdown code {
     background-color: #dedede;
 }
-
 
 /**
  * =============================================================================
@@ -362,24 +333,21 @@ pre[class*=language] {
     margin-left: -1.5rem;
 }
 
-    .grid-float > * {
-        float: left;
-        width: 100%;
-        padding-left: 1.5rem;
-    }
+.grid-float > * {
+    float: left;
+    width: 100%;
+    padding-left: 1.5rem;
+}
 
-    .grid-float:before {
-        content: '';
-        display: table;
-    }
-    .grid-float:after {
-        display: block;
-        content: '';
-        clear: both;
-    }
-
-
-
+.grid-float:before {
+    content: '';
+    display: table;
+}
+.grid-float:after {
+    display: block;
+    content: '';
+    clear: both;
+}
 
 .c-breadcrumb {
     font-size: 12px;
@@ -388,21 +356,20 @@ pre[class*=language] {
     margin-bottom: 2rem;
 }
 
-
 .c-breadcrumb a {
     color: #297588;
 }
 
 .c-breadcrumb a:hover {
-    color: #164E5D;
+    color: #164e5d;
 }
 
 .u-tight {
-    margin-bottom: .5rem;
+    margin-bottom: 0.5rem;
 }
 
 .u-xtight {
-    margin-bottom: .125rem;
+    margin-bottom: 0.125rem;
 }
 
 .u-text-small {
@@ -412,7 +379,6 @@ pre[class*=language] {
 .u-dark-text {
     color: #222;
 }
-
 
 .w-4\/10 {
     width: 35%;
@@ -425,13 +391,12 @@ pre[class*=language] {
     margin-bottom: 1rem;
 }
 
-
 .v-top {
     vertical-align: top;
 }
 
-code[class*=language-],
-pre[class*=language-] {
+code[class*='language-'],
+pre[class*='language-'] {
     white-space: pre-wrap;
 }
 
@@ -447,10 +412,10 @@ pre[class*=language-] {
     border-color: transparent;
     border-style: solid;
     border-width: 1px;
-    border-radius: .25em;
+    border-radius: 0.25em;
     cursor: pointer;
     font-family: inherit;
-    font-size: .9375rem;
+    font-size: 0.9375rem;
     font-weight: 400;
     line-height: 2;
     margin: inherit 0 0 0;
@@ -471,12 +436,10 @@ pre[class*=language-] {
     background: #07a;
 }
 
-
 .t-array {
     background: #690;
 }
 
 .t-object {
-    background: #E6A013;
+    background: #e6a013;
 }
-
