Add extra icon component as an example

--- a/examples/intro/patterns/components/components.html
+++ b/examples/intro/patterns/components/components.html
@@ -6,3 +6,4 @@
 {# {{ components.icon(icon="logo", class="icon-logo") }} #}
 
 {% macro list() %}{{ _component('list', kwargs) }}{% endmacro %}
+{% macro icon() %}{{ _component('icon', kwargs) }}{% endmacro %}
